# pytest-direnv

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  require-version.yml  tag-releases.yml  validate-change.yml
pyenv_direnv/: direnv.py
pytest_direnv/: __init__.py  direnv.py  plugin.py
pytest_direnv/direnv_export/: __init__.py  __main__.py
test/: test_pytest_direnv.py
