[tool.poetry]
name = "pyenv_direnv"
version = "0.1.0"
description = ""
authors = ["brent-moffit <72231013+brent-moffit@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
direnv = "pytest_direnv.plugin"