[tool.poetry]
name = "pytest-direnv"
version = "0.1.1"
description = ""
authors = ["brent-moffit <72231013+brent-moffit@users.noreply.github.com>"]
packages = [
  {include = "pyenv_direnv"},
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
direnv = "pytest-direnv.plugin"