[tool.poetry]
name = "pytest-direnv"
version = "0.1.12"
license = "MIT"
description = "A Pytest plugin that loads environment variables from a .envrc file using direnv."
authors = ["brent-moffit <72231013+brent-moffit@users.noreply.github.com>"]
repository = "https://github.com/brent-moffit/pytest-direnv"
keywords = ["pytest", "direnv", "envrc"]
packages = [
  {include = "pytest_direnv"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: Pytest",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = ">=5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
pytest-direnv = "pytest_direnv"